update all files
Unifying the format, deleting unimportant pages, and arranging the pages

--- a/HTML_Files/HomePage.html
+++ b/HTML_Files/HomePage.html
@@ -12,7 +12,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta name="keywords" content="HTML,CSS,js">
     <meta name="author" content="Ahmed Al-Qahtan, Mohannad Al-Jeddawi">
     <meta http-equiv="refresh" content="60">
-    <link rel="stylesheet" href="C:\programming_courses\CPCS_403_WEB_DEVELOPMENT\Assignment1\CSS\HomePage.css">
+    <link rel="stylesheet" href="../CSS_Files/HomePage.css">
 
 
     <!--Title of the page-->
@@ -22,15 +22,16 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     
 </head>
 <body>
-    <ul>
-        <li><a class="active" href="C:\programming_courses\CPCS_403_WEB_DEVELOPMENT\Assignment1\HTML\HomePage.html">Home</a></li>
-        <li><a href="C:\programming_courses\CPCS_403_WEB_DEVELOPMENT\Assignment1\HTML\Calendar.html">Calendar</a></li>
-        <li><a href="C:\programming_courses\CPCS_403_WEB_DEVELOPMENT\Assignment1\HTML\hw1.html">Tasks</a></li>
-        <li><a href="#about">Contact Us</a></li>
-        <li><a href="#about">Settings</a></li>
-        <li><a href="#about">Help</a></li>
-    </ul>
-
+    <header>
+        <ul>
+            <li><a class="active" href="HTML_Files/HomePage.html">Home</a></li>
+            <li><a href="Calendar.html">Calendar</a></li>
+            <li><a href="taskList.html">Task Lists</a></li>
+            <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Help</a></li>
+        </ul>
+    </header>
     <h1>Welcome to <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span></h1>
     <h2>Plan your Day, Prioritize Tasks</h2>
     <h2>Set Goals!</h2>
