Update html files
Update all html files including ContactUs.css

--- a/HTML_Files/HomePage.html
+++ b/HTML_Files/HomePage.html
@@ -29,7 +29,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
     <h1>Welcome to <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span></h1>
