--- a/HTML_Files/ContactUs.html
+++ b/HTML_Files/ContactUs.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="ContactUs.css">
+    <link rel="stylesheet" href="../CSS_Files/ContactUs.css">
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="HTML_Files/HomePage.html">Home</a></li>
+            <li><a href="Calendar.html">Calendar</a></li>
+            <li><a href="taskList.html">Task Lists</a></li>
+            <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a href="#">About</a></li>
+            <li><a class="active" href="ContactUs.html">Contact Us</a></li>
+        </ul>
+    </header>
 
 <div class="contact-container">
     <h2>Contact Us</h2>
