--- a/HTML_Files/taskList.html
+++ b/HTML_Files/taskList.html
@@ -16,7 +16,7 @@
             <li><a class="active" href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
             <li><a href="#">About</a></li>
-            <li><a href="#">Help</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
 
