Edited TaskList Page
Added TaskList Css file and edited TastList HTML file.

--- a/HTML_Files/taskList.html
+++ b/HTML_Files/taskList.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS_Files/style.css">
+    <link rel="stylesheet" href="../CSS_Files/taskList.css">
     <title>Task Lists - Calendary</title>
 </head>
 
@@ -22,6 +23,72 @@
 
     
 
+    <div class="tblElements">
+        <form class="contact-container">
+        <table class="table" border="1">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Description</th>
+                    <th>TargetDate</th>
+                    <th>IsDone?</th>
+                    <th>Update</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Make Project Plan</td>
+                    <td>Oct 19, 2023</td>
+                    <td>False</td>
+                    <td>
+                        <button class="Btn-Succ" type="submit">Update</button>
+                    </td>
+                    <td>
+                        <button class="Btn-del" type="delete">Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Study Game Development</td>
+                    <td>Oct 2, 2023</td>
+                    <td>True</td>
+                    <td>
+                        <button class="Btn-Succ" type="submit">Update</button>
+                    </td>
+                    <td>
+                        <button class="Btn-del" type="delete">Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Define Project Scope</td>
+                    <td>Oct 19, 2023</td>
+                    <td>False</td>
+                    <td>
+                        <button class="Btn-Succ" type="submit">Update</button>
+                    </td>
+                    <td>
+                        <button class="Btn-del" type="delete">Delete</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Create About Us Page</td>
+                    <td>Oct 19, 2023</td>
+                    <td>False</td>
+                    <td>
+                        <button class="Btn-Succ" type="submit">Update</button>
+                    </td>
+                    <td>
+                        <button class="Btn-del" type="delete">Delete</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        </form>
+    </div>
     
 </body>
 
