--- a/HTML_Files/ContactUs.html
+++ b/HTML_Files/ContactUs.html
@@ -13,11 +13,11 @@
             <li><a href="Calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="About.html">About</a></li>
             <li><a class="active" href="ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
-
+    
 <div class="contact-container">
     <h2>Contact Us</h2>
     <form>
