--- a/HTML_Files/CreateTask.html
+++ b/HTML_Files/CreateTask.html
@@ -15,7 +15,7 @@
             <li><a href="Calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a class="active" href="CreateTask.html">Create Task</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="About.html">About</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
@@ -32,7 +32,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 My To-Do List Website</p>
+        <p>&copy; 2023 Calendary Website</p>
     </footer>
 </body>
 
