--- a/HTML_Files/HomePage.html
+++ b/HTML_Files/HomePage.html
@@ -12,13 +12,11 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta name="keywords" content="HTML,CSS,js">
     <meta name="author" content="Ahmed Al-Qahtan, Mohannad Al-Jeddawi">
     <meta http-equiv="refresh" content="60">
+    
+     <!-- Embedded Stylesheet for the home page-->
     <link rel="stylesheet" href="../CSS_Files/HomePage.css">
-
-
     <!--Title of the page-->
     <title>Home page</title>
-
-    <!-- Embedded Stylesheet for the home page-->
     
 </head>
 <body>
@@ -28,7 +26,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
             <li><a href="Calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="About.html">About</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
