--- a/HTML_Files/about.html
+++ b/HTML_Files/about.html
@@ -1,74 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS_Files/style.css">
-    <link rel="stylesheet" href="../CSS_Files/about.css">
-
     <title>About - Calendary</title>
-   
+    <link rel="stylesheet" href="../CSS_Files/About.css">
 </head>
-
 <body>
+    
     <header>
-      <ul>
-          <li><a href="HomePage.html">Home</a></li>
-          <li><a href="Calendar.html">Calendar</a></li>
-          <li><a href="taskList.html">Task Lists</a></li>
-          <li><a href="CreateTask.html">Create Task</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="ContactUs.html">Contact Us</a></li>
-      </ul>
-  </header>
+        <ul>
+            <li><a href="HomePage.html">Home</a></li>
+            <li><a href="Calendar.html">Calendar</a></li>
+            <li><a href="taskList.html">Task Lists</a></li>
+            <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a class="active" href="About.html">About</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
+        </ul>
+    </header>
 
-  <div class="about-page">
+<div class="about-div">
+    <h2>About Life Organizer <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span></h2>
+    <p>Welcome to Life Organizer Calendary, a tool designed to simplify and enhance your daily life. In the hustle and bustle of the modern world, staying organized can be a challenge. Our platform provides a seamless way to keep track of important dates, tasks, and events, all in one place.</p>
+    
+    <h3>Our Mission</h3>
+    <p>Our mission is to empower individuals to lead organized and purposeful lives. We believe that by planning ahead and setting clear tasks and goals, you can reduce stress, increase productivity, and make the most of every day.</p>
 
-
-    <p>This is the help page for our <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span> website. Here, you can find answers to common questions and troubleshooting tips.</p>
-
-    <h2>What is <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span></h2>
-
-    <p>Calendary is a list of tasks that need to be completed. Calendary can be used to organize your work, your personal life, or both.</p>
-
-    <h2>Why should I use Calendary?</h2>
-
-    <p><span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span> can help you to:</p>
-
+    <h3>Features</h3>
     <ul>
-      <li>Stay organized</li>
-      <li>Prioritize your tasks</li>
-      <li>Avoid forgetting important tasks</li>
-      <li>Track your progress</li>
-      <li>Reduce stress</li>
+        <li>Easy-to-view monthly, weekly, and daily calendar formats.</li>
+        <li>Add, edit, or delete events and tasks with a few clicks.</li>
+        <li>Collaborate and share events with friends and family.</li>
     </ul>
 
-    <h2>How do I use a <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary?</span></h2>
+    <h3>Join Us in the Journey</h3>
+    <p>We're continuously working to improve Life Organizer Calendar and introduce new features that can further assist our users. Your feedback is invaluable in shaping the future of this tool. Feel free to <a href="ContactUs.html">contact us</a> with suggestions, questions, or any feedback you might have.</p>
 
-    <p>To use a <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span>, simply:</p>
-
-    <ol>
-      <li>Write down all of the tasks that you need to complete.</li>
-      <li>Prioritize your tasks.</li>
-      <li>Set deadlines for your tasks.</li>
-      <li>Schedule time to work on your tasks.</li>
-      <li>Mark off tasks as you complete them.</li>
-    </ol>
-
-    <h2>Troubleshooting</h2>
-
-    <p>If you are having trouble using Calendary, here are some tips:</p>
-
-    <ul>
-      <li>Try using a different to-do list format. There are many different types of to-do lists available, such as paper to-do lists, electronic to-do lists, and even to-do list apps.</li>
-      <li>Experiment with different ways of organizing your to-do list. You may find that it is helpful to organize your tasks by project, by priority, or by due date.</li>
-      <li>Set realistic goals for yourself. If you have too many tasks on your to-do list, you may feel overwhelmed and discouraged.</li>
-      <li>Take breaks throughout the day to avoid burnout.</li>
-      <li>Reward yourself for completing tasks. This will help you to stay motivated and on track.</li>
-    </ul>
-
-    <p>If you have any other questions, please do not hesitate to <a href="ContactUs.html">contact us.</a></p>
-  </div>
+</div>
 
 </body>
+</html>
