--- a/HTML_Files/HomePage.html
+++ b/HTML_Files/HomePage.html
@@ -22,7 +22,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <body>
     <header>
         <ul>
-            <li><a class="active" href="HTML_Files/HomePage.html">Home</a></li>
+            <li><a class="active" href="HomePage.html">Home</a></li>
             <li><a href="Calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
