Update paragraph in HomePage.html

--- a/HTML_Files/HomePage.html
+++ b/HTML_Files/HomePage.html
@@ -38,9 +38,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
         <b><span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span>
         is an intuitive website designed for individuals and teams looking to streamline their scheduling and task management processes. 
         Users can easily view their schedules in various formats such as monthly, weekly, or daily views. 
-        They can add or edit tasks&#47;events with ease, and even bring collaborators onboard for joint activities or tasks. 
-        The platform also offers a user settings page to customize notifications 
-        and user preferences and has a dedicated help page for user assistance.
+        They can add or edit tasks&#47;events with ease. The platform also offers a dedicated help page for user assistance and furthormore it offers 'About' webpage specified to tell users more about our Calendary's mission and functionalities.
         </b>
     </p>
 
