--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta http-equiv="refresh" content="60">
     
      <!-- Embedded Stylesheet for the home page-->
-    <link rel="stylesheet" href="../CSS_Files/HomePage.css">
+    <link rel="stylesheet" href="CSS_Files/HomePage.css">
     <!--Title of the page-->
     <title>Home page</title>
     
@@ -23,11 +23,11 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <header>
         <ul>
             <li><a class="active" href="index.html">Home</a></li>
-            <li><a href="Calendar.html">Calendar</a></li>
-            <li><a href="taskList.html">Task Lists</a></li>
-            <li><a href="CreateTask.html">Create Task</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="ContactUs.html">Contact Us</a></li>
+            <li><a href="HTML_Files/calendar.html">Calendar</a></li>
+            <li><a href="HTML_Files/taskList.html">Task Lists</a></li>
+            <li><a href="HTML_Files/CreateTask.html">Create Task</a></li>
+            <li><a href="HTML_Files/about.html">About</a></li>
+            <li><a href="HTML_Files/ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
     <h1>Welcome to <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span></h1>
