--- a/HTML_Files/CreateTask.html
+++ b/HTML_Files/CreateTask.html
@@ -15,7 +15,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <body>
     <header>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="Calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a class="active" href="CreateTask.html">Create Task</a></li>
