--- a/HTML_Files/calendar.html
+++ b/HTML_Files/calendar.html
@@ -16,7 +16,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <body>
   <header>
     <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a class="active" href="Calendar.html">Calendar</a></li>
         <li><a href="taskList.html">Task Lists</a></li>
         <li><a href="CreateTask.html">Create Task</a></li>
