--- a/HTML_Files/about.html
+++ b/HTML_Files/about.html
@@ -8,7 +8,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Calendary</title>
-    <link rel="stylesheet" href="../CSS_Files/About.css">
+    <link rel="stylesheet" href="../CSS_Files/about.css">
 </head>
 <body>
     
