--- a/HTML_Files/ContactUs.html
+++ b/HTML_Files/ContactUs.html
@@ -14,7 +14,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <header>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="Calendar.html">Calendar</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
             <li><a href="about.html">About</a></li>
