add print style

--- a/HTML_Files/taskList.html
+++ b/HTML_Files/taskList.html
@@ -10,6 +10,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS_Files/style.css">
     <link rel="stylesheet" href="../CSS_Files/taskList.css">
+    <link rel="stylesheet" href="../CSS_Files/taskListPrint.css"/>
     <title>Task Lists - Calendary</title>
 </head>
 
