Change the whole project
Deleted all the taskbar styles from:
style.css, HomePage.css, about.css and ContactUs.css.

Then added a new TaskBar.css file to style only the taskbar part.

--- a/HTML_Files/about.html
+++ b/HTML_Files/about.html
@@ -7,17 +7,22 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Calendary</title>
     <link rel="stylesheet" href="../CSS_Files/about.css">
+    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
+    
+    <title>About - Calendary</title>
 </head>
 <body>
     
+    <!-- Taskbar -->
     <header>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a href="video.html">Tutorial Video</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
