--- a/HTML_Files/feedback.html
+++ b/HTML_Files/feedback.html
@@ -10,11 +10,26 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback Form</title>
     <link rel="stylesheet" href="..\CSS_Files\feedback-styles.css">
+    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
 </head>
 <body>
+    
+    <!-- Taskbar -->
+    <header>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="taskList.html">Task Lists</a></li>
+            <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a href="video.html">Tutorial Video</a></li>
+            <li><a class="active" href="feedback.html">Feedback</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
+        </ul>
+    </header>
 
     <!-- Feedback Form Section -->
-    <div class="feedback-form-container">
+    <div class="feedback">
         <h2>Feedback Form</h2>
         <form action="/submit-feedback" method="post">
             <fieldset>
