--- a/HTML_Files/video.html
+++ b/HTML_Files/video.html
@@ -10,11 +10,26 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Page</title>
     <link rel="stylesheet" href="..\CSS_Files\video-styles.css">
+    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
 </head>
 <body>
+    
+    <!-- Taskbar -->
+    <header>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="calendar.html">Calendar</a></li>
+            <li><a href="taskList.html">Task Lists</a></li>
+            <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a class="active" href="video.html">Tutorial Video</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
+        </ul>
+    </header>
 
     <!-- Video Section -->
-    <div class="video-container">
+    <div class="video">
         <h2>A video related to our Project's topic</h2>
         <!-- Embed a YouTube video using the object tag -->
         <iframe width="1280" height="720" src="https://www.youtube.com/embed/o1yMqPyYeAo?si=3aIfs1aM7Brlu5H6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
