--- a/HTML_Files/ContactUs.html
+++ b/HTML_Files/ContactUs.html
@@ -7,16 +7,21 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
     <link rel="stylesheet" href="../CSS_Files/ContactUs.css">
+    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
+    
+    <title>Contact Us</title>
 </head>
 <body>
+    <!-- Taskbar -->
     <header>
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
             <li><a href="taskList.html">Task Lists</a></li>
             <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a href="video.html">Tutorial Video</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="active" href="ContactUs.html">Contact Us</a></li>
         </ul>
