--- a/HTML_Files/calendar.html
+++ b/HTML_Files/calendar.html
@@ -10,20 +10,24 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS_Files/calendar.css">
     <link rel="stylesheet" href="../CSS_Files/style.css">
+    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
     <title>Calendar - Calendary</title>
 </head>
 
 <body>
-  <header>
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a class="active" href="calendar.html">Calendar</a></li>
-        <li><a href="taskList.html">Task Lists</a></li>
-        <li><a href="CreateTask.html">Create Task</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="ContactUs.html">Contact Us</a></li>
-    </ul>
-</header>
+  <!-- Taskbar -->
+    <header>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a class="active" href="calendar.html">Calendar</a></li>
+            <li><a href="taskList.html">Task Lists</a></li>
+            <li><a href="CreateTask.html">Create Task</a></li>
+            <li><a href="video.html">Tutorial Video</a></li>
+            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="ContactUs.html">Contact Us</a></li>
+        </ul>
+    </header>
 
     <section class="calendar">
         <h2 style="text-align: center;">View the Calendar</h2>
