update taskbar style

--- a/HTML_Files/ContactUs.html
+++ b/HTML_Files/ContactUs.html
@@ -14,7 +14,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 </head>
 <body>
     <!-- Taskbar -->
-    <header>
+    <header class="h">
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
