--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <body>
     
     <!-- Taskbar -->
-    <header>
+    <header class="h">
         <ul>
             <li><a class="active" href="../index.html">Home</a></li>
             <li><a href="HTML_Files/calendar.html">Calendar</a></li>
