--- a/HTML_Files/calendar.html
+++ b/HTML_Files/calendar.html
@@ -16,7 +16,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 
 <body>
   <!-- Taskbar -->
-    <header>
+    <header class="h">
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a class="active" href="calendar.html">Calendar</a></li>
