--- a/HTML_Files/taskList.html
+++ b/HTML_Files/taskList.html
@@ -19,7 +19,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 <body>
     
     <!-- Taskbar -->
-    <header>
+    <header class="h">
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="calendar.html">Calendar</a></li>
