--- a/HTML_Files/ContactUs.html
+++ b/HTML_Files/ContactUs.html
@@ -27,7 +27,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
         </ul>
     </header>
     
-<div class="contact-container">
+<div class="contact-box">
     <h2>Contact Us</h2>
     <form>
         <div class="form-group">
