--- a/HTML_Files/CreateTask.html
+++ b/HTML_Files/CreateTask.html
@@ -27,20 +27,23 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
             <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
     </header>
-
-    <section class="add-event">
-        <h2>Add New Task</h2>
-        <form>
-            <label for="event-title">Task Title:</label><br>
-            <input type="text" id="event-title" name="event-title"><br><br>
-            <label for="event-date">Event Date:</label><br>
-            <input type="date" id="event-date" name="event-date"><br><br>
-            <input type="submit" value="Add Event">
-        </form>
-    </section>
+    
+    <div class="CreateTask">
+        <section class="add-event">
+            <h2>Add New Task</h2>
+            <form>
+                <label for="event-title">Task Title:</label><br>
+                <input type="text" id="event-title" name="event-title"><br><br>
+                <label for="event-date">Event Date:</label><br>
+                <input type="date" id="event-date" name="event-date"><br><br>
+                <input type="submit" value="Add Event">
+            </form>
+        </section>
+    </div>
+    
 
     <footer>
-        <p>&copy; 2023 Calendary Website</p>
+        <p><span style="color: white">&copy; 2023 Calendary Website</span></p>
     </footer>
 </body>
 
