--- a/HTML_Files/video.html
+++ b/HTML_Files/video.html
@@ -30,7 +30,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
 
     <!-- Video Section -->
     <div class="video">
-        <h2>A video related to our Project's topic</h2>
+        <h2><b>A VIDEO RELATED TO OUR PROJECT'S TOPIC</b></h2>
         <!-- Embed a YouTube video using the object tag -->
         <iframe width="1280" height="720" src="https://www.youtube.com/embed/o1yMqPyYeAo?si=3aIfs1aM7Brlu5H6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
