--- a/HTML_Files/about.html
+++ b/HTML_Files/about.html
@@ -32,10 +32,10 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <h2>About Life Organizer <span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span></h2>
     <p>Welcome to Life Organizer Calendary, a tool designed to simplify and enhance your daily life. In the hustle and bustle of the modern world, staying organized can be a challenge. Our platform provides a seamless way to keep track of important dates, tasks, and events, all in one place.</p>
     
-    <h3>Our Mission</h3>
+    <h3 style="color: firebrick">Our Mission</h3>
     <p>Our mission is to empower individuals to lead organized and purposeful lives. We believe that by planning ahead and setting clear tasks and goals, you can reduce stress, increase productivity, and make the most of every day.</p>
 
-    <h3>Features</h3>
+    <h3 style="color: green">Features</h3>
     <ul>
         <li>Easy-to-view monthly, weekly, and daily calendar formats.</li>
         <li>Add, edit, or delete events and tasks with a few clicks.</li>
