--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <!-- Taskbar -->
     <header class="h">
         <ul>
-            <li><a class="active" href="../index.html">Home</a></li>
+            <li><a class="active" href="index.html">Home</a></li>
             <li><a href="HTML_Files/calendar.html">Calendar</a></li>
             <li><a href="HTML_Files/taskList.html">Task Lists</a></li>
             <li><a href="HTML_Files/CreateTask.html">Create Task</a></li>
@@ -41,7 +41,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <h2>Plan your Day, Prioritize Tasks</h2>
     <h2>Set Goals!</h2>
     
-    <p>
+    <p style="box-shadow: 0 0 15px rgba(0, 0, 0, 0.9);">
         <b><span style="color: orange; text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;">Calendary</span>
         is an intuitive website designed for individuals and teams looking to streamline their scheduling and task management processes. 
         Users can easily view their schedules in various formats such as monthly, weekly, or daily views. 
