--- a/HTML_Files/calendar.html
+++ b/HTML_Files/calendar.html
@@ -2,21 +2,20 @@
 Student 1: Ahmed Al-Qahtan, ID: 2046143
 Student 2: Mohannad Al-Jeddawi, ID: 2036459
 -->
-<!DOCTYPE html>
-<html lang="en">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS_Files/style.css">
-    <link rel="stylesheet" href="../CSS_Files/calendar.css">
-    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../CSS_Files/style.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS_Files/calendar.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS_Files/TaskBar.css" />
     <title>Calendar - Calendary</title>
 </head>
-
 <body>
-  <!-- Taskbar -->
-    <header class="h">
+    <!-- Taskbar -->
+    <div class="h">
         <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a class="active" href="calendar.html">Calendar</a></li>
@@ -27,19 +26,19 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
             <li><a href="about.html">About</a></li>
             <li><a href="ContactUs.html">Contact Us</a></li>
         </ul>
-    </header>
+    </div>
 
-    <section class="calendar">
+    <div class="calendar">
         <h2 style="text-align: center;">View the Calendar</h2>
         <div class="month">
             <ul>
               <li class="prev">&#10094;</li>
               <li class="next">&#10095;</li>
-              <li>August<br><span style="font-size:18px">2021</span></li>
+              <li>August<br /><span style="font-size:18px">2021</span></li>
             </ul>
-          </div>
+        </div>
           
-          <ul class="weekdays">
+        <ul class="weekdays">
             <li>Mo</li>
             <li>Tu</li>
             <li>We</li>
@@ -47,9 +46,9 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
             <li>Fr</li>
             <li>Sa</li>
             <li>Su</li>
-          </ul>
+        </ul>
           
-          <ul class="days">
+        <ul class="days">
             <li>1</li>
             <li>2</li>
             <li>3</li>
@@ -81,10 +80,8 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
             <li>29</li>
             <li>30</li>
             <li>31</li>
-          </ul>
-    </section>
-
-   
+        </ul>
+    </div>
 </body>
-
 </html>
+
