--- a/HTML_Files/taskList.html
+++ b/HTML_Files/taskList.html
@@ -11,7 +11,7 @@ Student 2: Mohannad Al-Jeddawi, ID: 2036459
     <link rel="stylesheet" href="../CSS_Files/style.css">
     <link rel="stylesheet" href="../CSS_Files/taskList.css">
     <link rel="stylesheet" href="../CSS_Files/taskListPrint.css"/>
-    <link rel="stylesheet" href="..\CSS_Files\TaskBar.css">
+    <link rel="stylesheet" href="../CSS_Files/TaskBar.css">
     
     <title>Task Lists - Calendary</title>
 </head>
